# Vedo-Renderer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: VeBase.h
include/math/: VeVector.h
include/render/: VeCamera.h  VeObject.h  VeRender.h
include/shader/: VeShader.h
include/skia/: VeSkia.h
shaders/: path_tracing.sksl  vedo_test_shader.sksl
shaders/tests/: vedo_test_shader.sksl
source/math/: VeVector.cpp
source/render/: VeCamera.cpp  VeRender.cpp
source/shader/: VeShader.cpp
tests/VeShaderTest/: main.cpp
